k8s/mcloud-12/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mcloud-12-calculator
  labels:
    environment: staging
    tier: frontend
    service: webapp
