k8s/mcloud-12/web-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-server-dep
  namespace: mcloud-12-calculator
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-server
      version: v1.0
  template:
    metadata:
      labels:
        app: web-server
        version: v1.0
    spec:
      containers:
        - name: web-server
          image: ghcr.io/pavelkomiss121/mcloud-core:web-server
          ports:
            - containerPort: 8080
