k8s/mcloud-12/calculator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calculator_service
  namespace: staging
spec:
  selector:
    app: calculator
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
