k8s/mcloud-12/web-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-server-service
  namespace: mcloud-12-calculator
spec:
  selector:
    app: web-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
