k8s/mcloud-12/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: calculator-vs
  namespace: mcloud-12-calculator
spec:
  hosts:
    - calculator
  http:
    - match:
        - headers:
            x-version:
              exact: v2
      route:
        - destination:
            host: calculator
            subset: v2
    - route:
        - destination:
            host: calculator
            subset: v1
          weight: 80
        - destination:
            host: calculator
            subset: v2
          weight: 20
